# MarketDejaVu

./: .gitignore  AGENTS.md  README.md  notes.md  opencode.json  project.md  pyproject.toml  report.md  report.typ  slides.md
data/processed/: aligned_daily.parquet  hmm_states.csv  hmm_states_test.csv  hmm_states_train.csv  hmm_states_val.csv  total_summary.csv  total_summary_clean.csv  交易记录1000.csv  交易记录300.csv  交易记录800.csv  交易记录etf动量改.csv  交易记录etf动量轮动.csv  交易记录中证2000.csv  交易记录全球etf.csv  交易记录养殖.csv  交易记录军工.csv  交易记录创业板.csv  交易记录动量趋势.csv  交易记录化工.csv  交易记录半导体.csv  交易记录双创.csv  交易记录国企.csv  交易记录均衡持仓.csv  交易记录形态.csv  交易记录房地产.csv  交易记录旅游.csv  交易记录机器人.csv  交易记录杠铃.csv  交易记录桥水全天候.csv  交易记录游戏.csv  交易记录煤炭.csv  交易记录申万动量.csv  交易记录百亿etf一只.csv  交易记录百亿etf两只.csv  交易记录科创.csv  交易记录红利.csv  交易记录综合拆分1.csv  交易记录综合拆分2.csv  交易记录行业.csv  交易记录计算机.csv  (+5 more)
docs/: project-def.md  ricequant-doc-index.md  strategy_definitions.csv  strategy_definitions_mtm_only.csv  todo.md
experiments/: baselines.py  pool_defs.json  run_ablation.py  run_ablation_v2.py  run_ablation_v3.py
output/tables/: ablation_MTM-filtered.csv  ablation_MTM-filtered_ETF.csv  ablation_MTM-unfiltered.csv  ablation_MTM-unfiltered_ETF.csv  ablation_Mapped.csv  ablation_Mapped_ETF.csv  ablation_Mapped_ETF_allMTM.csv  ablation_Mapped_ETF_goodMTM.csv  ablation_baselines.csv  ablation_results.csv  ablation_v2_MTM-filtered.csv  ablation_v2_MTM-filtered_ETF.csv  ablation_v2_MTM-unfiltered.csv  ablation_v2_MTM-unfiltered_ETF.csv  ablation_v2_results.csv  ablation_v3_MTM-filtered.csv  ablation_v3_MTM-filtered_ETF.csv  ablation_v3_results.csv  (+31 more)
(+85 files in other folders)
