[project]
name = "msa"
version = "0.1.0"
description = "A股行情聚类与量化策略匹配研究 — MA304 多元统计分析课程项目"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "openpyxl>=3.1",
    "rqsdk>=1.7",
    "rqdatac>=3.5",
    "akshare>=1.12",
    "hmmlearn>=0.3.3",
    "xgboost>=3.2.0",
    "pyarrow>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data", "src/features", "src/models", "src/backtest", "src/visualize"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.5"]
